@@ -16,10 +16,10 @@
 #include <initializer_list>
 #include <vector>
 
-#define MINIMUM_LAND_HEIGHT 2
-#define MAXIMUM_LAND_HEIGHT 142
-#define MINIMUM_WATER_HEIGHT 2
-#define MAXIMUM_WATER_HEIGHT 142
+constexpr uint8_t MINIMUM_LAND_HEIGHT = 2;
+constexpr uint8_t MAXIMUM_LAND_HEIGHT = 254;
+constexpr uint8_t MINIMUM_WATER_HEIGHT = 2;
+constexpr uint8_t MAXIMUM_WATER_HEIGHT = 254;
 
 #define MINIMUM_MAP_SIZE_TECHNICAL 5
 #define MAXIMUM_MAP_SIZE_TECHNICAL 1001
